--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 GMAIL_EMAIL="YOUR_GMAIL_EMAIL"
 GMAIL_PASSWORD="YOUR_GMAIL_PASSWORD"
+
+DB_USERNAME="YOUR_DB_USERNAME"
+DB_PASSWORD="YOUR_DB_PASSWORD"
+DB_HOST="YOUR_DB_HOST"
+DB_DATABASE="YOUR_DB_DATABASE"
